--- a/style.css
+++ b/style.css
@@ -1,45 +1,38 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+section, header, footer, nav {
+    display:block;
+}
+
+html, body {
     margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+    padding: o;
 }
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
+
 html {
-    height: 100%;
+    background: #ccc;
 }
+
 body {
-    line-height: 1;
+    width: 1400px;
+    background: #0c80c4;
+    margin-left: 220px;
 }
-ol, ul {
-    list-style: none;
+
+nav {
+    background: rgb(0, 0, 0);
+    width: 1000px;
+    height: 50px;
+    float: right;
+
 }
-blockquote, q {
-    quotes: none;
+
+ul>li>a {display: block;}
+
+.menu {
+    display: inline-block;
+    margin-right: 50px;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
+
+img {
+    width: 250px;
+    height: 250px;
 }
