--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-saside, article, section, header, footer, nav {
+aside, article, section, header, footer, nav {
 	display: block;
 }
 div, section, article, h1, h2, h3, p {
