--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
-
+html {
+    box-sizing: border-box;
+    font-size: 62.5%;
+  }
+*, *::before, *::after {
+    box-sizing: inherit;
+  }
+  body {
+    margin: 0;
+  }
